# nw-idea

./: .gitignore  README.md  mbuild  mbuild.bat  mkbuild  mkbuild.bat  mkgen  mkgen.bat  mkmk.cpp  mksr
api/cson/: CSON.h  cencodable.cpp  cobject.h  cwrite.cpp
api/dash/: DASH.cpp  DASH.h  dfile.h  dname.h  dobject.h
api/low/: LOW.cpp  lcall.cpp
api/master/: MASTER.cpp  mapp.cpp
api/net/: NET.cpp
api/reflect/: REFECT.h  REFLECT.cpp  rany.cpp  rfunction.cpp  rinjectable.cpp  rsymbol.cpp
api/system/: SYSTEM.cpp
api/ui/: uwindow.cpp  uwindow.h
capi/dash/: DASH.cpp  dbytes.h  ddefer.h  dprint.cpp
capi/low/: lcall.cpp  lcpp.cpp
capi/master/: MASTER.h  mapp.cpp
capi/net/: NET.cpp
capi/reflect/: rfunction.h  rmeta.h  robject.cpp  rvector.h
capi/ui/: UI.cpp  uwindow.cpp
comprj/cson/: mkmk  mkmk.bat
comprj/dash/: mkmk  mkmk.bat
comprj/low/: mkmk  mkmk.bat
comprj/master/: mkmk  mkmk.bat
comprj/nanojs/: mkmk  mkmk.bat
comprj/nanojslib/: mkmk  mkmk.bat
comprj/net/: mkmk  mkmk.bat
comprj/reflect/: mkmk  mkmk.bat
comprj/system/: mkmk  mkmk.bat
comprj/ui/: mkmk  mkmk.bat
cpp/cson/: CSON.cpp  CSON.h  cencodable.cpp  cencodable.h  cobject.h  cread.cpp  cread.h  cwrite.cpp  cwrite.h
cpp/dash/: DASH.cpp  DASH.h  danycast.h  dbuffer.h  dbytes.cpp  (+7 more)
intprj/android/app/make/: CMakeLists.txt
item_dash/: entry.cpp  main.cpp  mkmk  mkmk.bat  mkmk.zsh
item_nanojs/: entry.cpp  mkmk  mkmk.bat  mkmk.zsh
item_reflect/: entry.cpp  mkmk  mkmk.bat  mkmk.zsh
item_sjson/: mkmk  mkmk.bat
item_structjson/: entry.cpp  mkmk  mkmk.bat  mkmk.zsh
(+218 files in other folders)
